Add group image in blog

--- a/about.html
+++ b/about.html
@@ -28,15 +28,21 @@
     <div class="container-fluid" id="about1">
         <div class="row">
             <div class="col-lg-5">
-                <img id="logo" class="rounded" src="assets/images/homes-for-hounds-logo400x300.png" alt="Graphic of dog">
+                <img id="logo" class="rounded" src="assets/images/homes-for-hounds-logo400x300.png"
+                    alt="Graphic of dog">
             </div>
             <div class="col-lg-7">
                 <h2>About Us</h2>
-                <p>Homes for hounds are a charity dedicated to the re-homing of retired racing greyhounds. We were established in 1988 and since then have rehomed many hundreds of retired dogs to their forever homes. These dogs
+                <p>Homes for hounds are a charity dedicated to the re-homing of retired racing greyhounds. We were
+                    established in 1988 and since then have rehomed many hundreds of retired dogs to their forever
+                    homes. These dogs
                     settle
                     into retirement easily and make wonderful pets.</p>
                 <p>If you are considering re-homing a dog then why not speak to us about our greyhounds. We have dogs
-                    suitable for all types of households including those with children and other animals. You can contact us through our <a href="form.html" aria-label="Go to About Us">Get in Touch</a></li> page.</p></p>
+                    suitable for all types of households including those with children and other animals. You can
+                    contact us through our <a href="form.html" aria-label="Go to About Us">Get in Touch</a></li> page.
+                </p>
+                </p>
                 <p>Greyhounds are easy to keep, they require surprisingly little exercise and are quiet and clean in the
                     house. They have a naturally calm, laid-back temperament and adapt from life on the track to life on
                     the
@@ -45,51 +51,61 @@
         </div>
     </div>
     <div class="parent-container d-sm-flex">
-    <div class="container" id="about2">
-        <div class="row">
-            <div class="col-sm-6">
-                <h2>Did You Know?</h2>
-                <p>Did you know the greyhound is one of the oldest breeds in history? These noble dogs have been traced
-                    back
-                    over 4,000
-                    years to early cave drawings and are the only breed mentioned in the Bible. By giving a greyhound a
-                    home, you are taking
-                    on a true thoroughbred and a breed that has been “man's best friend” for thousands of years!</p>
-            </div>
-            <div class="col-sm-6">
-                <img id="dogs-playing" src="assets/images/mark-galer_cropresize.jpg" class="rounded"
-                    alt="Photo of dogs playing on beach">
+        <div class="container" id="about2">
+            <div class="row">
+                <div class="col-sm-6">
+                    <h2>Did You Know?</h2>
+                    <p>Did you know the greyhound is one of the oldest breeds in history? These noble dogs have been
+                        traced
+                        back
+                        over 4,000
+                        years to early cave drawings and are the only breed mentioned in the Bible. By giving a
+                        greyhound a
+                        home, you are taking
+                        on a true thoroughbred and a breed that has been “man's best friend” for thousands of years!</p>
+                </div>
+                <div class="col-sm-6">
+                    <img id="dogs-playing" src="assets/images/mark-galer_cropresize.jpg" class="rounded"
+                        alt="Photo of dogs playing on beach">
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="container" id="about2a">
-        <div class="row">
-            <div class="col-sm-12">
-                <h2>Articles</h2>
-                <p>Please follow the links below for info on this gentle breed and articles on how to care for them.</p>
-                <ul>
-                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/are-you-ready-to-adopt-a-greyhound"
-                            target="_blank">Are you ready to adopt a greyhound?</a></li>
-                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/what-is-your-new-adopted-greyhound-thinking"
-                            target="_blank">What is your greyhound thinking?</a></li>
-                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/travelling-safely-with-your-greyhound"
-                            target="_blank">Travelling safely with your greyhound</a></li>
-                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/understanding-separation-anxiety-in-greyhounds"
-                            target="_blank">Understanding separation anxiety</a></li>
-                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/what-is-prey-drive" target="_blank">What is prey
-                            drive?</a></li>
-                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/the-importance-of-nail-and-teeth-care-for-your-dog"
-                            target="_blank">Guide to nail and teeth care</a></li>
-                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/feeding-a-balanced-diet-to-your-greyhound"
-                            target="_blank">Feeding a balanced diet</a></li>
-                    <li><a rel="external"
-                            href="https://www.greyhoundtrust.org.uk/assets/000/004/111/training_tips_original.pdf?1581612710"
-                            target="_blank">Teaching basic commands</a></li>
-                </ul>
+        <div class="container" id="about2a">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2>Articles</h2>
+                    <p>Please follow the links below for info on this gentle breed and articles on how to care for them.
+                    </p>
+                    <ul>
+                        <li><a rel="external"
+                                href="https://www.barleykennels.co.uk/care/are-you-ready-to-adopt-a-greyhound"
+                                target="_blank">Are you ready to adopt a greyhound?</a></li>
+                        <li><a rel="external"
+                                href="https://www.barleykennels.co.uk/care/what-is-your-new-adopted-greyhound-thinking"
+                                target="_blank">What is your greyhound thinking?</a></li>
+                        <li><a rel="external"
+                                href="https://www.barleykennels.co.uk/care/travelling-safely-with-your-greyhound"
+                                target="_blank">Travelling safely with your greyhound</a></li>
+                        <li><a rel="external"
+                                href="https://www.barleykennels.co.uk/care/understanding-separation-anxiety-in-greyhounds"
+                                target="_blank">Understanding separation anxiety</a></li>
+                        <li><a rel="external" href="https://www.barleykennels.co.uk/care/what-is-prey-drive"
+                                target="_blank">What is prey
+                                drive?</a></li>
+                        <li><a rel="external"
+                                href="https://www.barleykennels.co.uk/care/the-importance-of-nail-and-teeth-care-for-your-dog"
+                                target="_blank">Guide to nail and teeth care</a></li>
+                        <li><a rel="external"
+                                href="https://www.barleykennels.co.uk/care/feeding-a-balanced-diet-to-your-greyhound"
+                                target="_blank">Feeding a balanced diet</a></li>
+                        <li><a rel="external"
+                                href="https://www.greyhoundtrust.org.uk/assets/000/004/111/training_tips_original.pdf?1581612710"
+                                target="_blank">Teaching basic commands</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
     </div>
 
     <div class="container-fluid" id="about3">
