--- a/form.html
+++ b/form.html
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="column-12">
                 <p>Please use this form to enquire about our dogs. We love to hear from potential new owners
-                    and will get back to you to discuss the rehoming process in more detail</p>
+                    and will get back to you to discuss the rehoming process in more detail.</p>
             </div>
         </div>
     </div>
@@ -37,7 +37,6 @@
             <div class="row">
                 <div class="col-sm-6 vr">
                     <h2>Get in Touch</h2>
-
                     <div class="form-group">
                         <label for="name">Name:</label>
                         <input type="text" id="name" name="name" placeholder="Your name.." required>
