Add cave painting image on about.html

--- a/about.html
+++ b/about.html
@@ -65,8 +65,8 @@
                         on a true thoroughbred and a breed that has been “man's best friend” for thousands of years!</p>
                 </div>
                 <div class="col-sm-6">
-                    <img id="dogs-playing" src="assets/images/mark-galer_cropresize.jpg" class="rounded"
-                        alt="Photo of dogs playing on beach">
+                    <img id="cave-painting" src="assets/images/cave_painting.jpg" class="rounded"
+                        alt="Cave painting of dogs hunting buffalo">
                 </div>
             </div>
         </div>
