Fix img-responsive class added to images

--- a/form.html
+++ b/form.html
@@ -33,9 +33,9 @@
     </div>
     <br>
     <div class="container">
-        <form method="POST" action="https://formdump.codeinstitute.net/">
-            <div class="row">
-                <div class="col-sm-6 vr">
+        <div class="row">
+            <div class="col-sm-6">
+                    <form method="POST" action="https://formdump.codeinstitute.net/"></form>
                     <h2>Get in Touch</h2>
                     <div class="form-group">
                         <label for="name">Name:</label>
@@ -67,8 +67,6 @@
                         <input type="submit" value="Submit">
                     </div>
                 </div>
-        </form>
-
         <div class="col-sm-6">
             <h2>How to Find Us</h2>
             <p>We are conveniently located just minutes from the A48 in Cross Hands, South Wales</p>
@@ -89,7 +87,7 @@
                 Sat & Sun 10am-4pm</p>
         </div>
     </div>
-    </div>
+</div>
 
     <!--Footer & Social media links-->
     <footer>
