--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </head>
 
 <body>
+
     <!--Nav bar-->
+
     <ul class="nav-bar sticky-top">
         <li><a class="active" href="index.html" aria-label="Go to the top of the page">Home</a></li>
         <li><a href="about.html" aria-label="Go to About Us">About Us</a></li>
@@ -25,100 +27,97 @@
     </ul>
 
     <!--Logo-->
+
     <div>
         <h1>Homes for Hounds<img class="logo" src="assets/images/logo3cropresize.png" alt="Homes for Hounds logo"
                 width="280" height="80"></h1>
     </div>
 
     <!--Hero image-->
+
     <div>
         <img id="hero-image" src="assets/images/tonia_kraakman1.jpg" alt="Closeup of dogs face">
     </div>
     <br>
 
     <!--Content-->
-    <div class="parent-container d-sm-flex">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h2>What We Do</h2>
-                    <p>Thanks for visiting the Homes for Hounds website. To learn more about what we do and how you can
-                        get involved take a look at
-                        our <a href="about.html" aria-label="Go to About Us">About Us</a> page.
-                    </p>
-                    <p>You will also find lots of articles on how to care for your dog and fun facts about greyhounds.
-                    </p>
-                    <img id="sunset" src="assets/images/sunset.jpg" class="rounded" alt="Photo of dog in silhouette">
-                    <br>
-                    <p>Once you are happy a greyhound is the right dog for you go and <a href="dogs.html"
-                            aria-label="Meet our Dogs">Meet our Dogs.</a> The website is updated regularly so make sure
-                        you keep checking back to see our new arrivals!
-                    </p>
-                    <img id="dogs-playing" src="assets/images/dogs_running.jpg" class="rounded"
-                        alt="Photo of dogs playing on beach">
-                </div>
+    >
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 border-right border-dark">
+                <h2>What We Do</h2>
+                <p>Thanks for visiting the Homes for Hounds website. To learn more about what we do and how you can
+                    get involved take a look at
+                    our <a href="about.html" aria-label="Go to About Us">About Us</a> page.
+                </p>
+                <p>You will also find lots of articles on how to care for your dog and fun facts about greyhounds.
+                </p>
+                <img id="sunset" src="assets/images/sunset.jpg" class="img-responsive rounded"
+                    alt="Photo of dog in silhouette">
+                <br>
+                <br>
+                <p>Once you are happy a greyhound is the right dog for you go and <a href="dogs.html"
+                        aria-label="Meet our Dogs">Meet our Dogs.</a> The website is updated regularly so make sure
+                    you keep checking back to see our new arrivals!
+                </p>
+                <img id="dogs-playing" src="assets/images/dogs_running.jpg" class="rounded"
+                    alt="Photo of dogs playing on beach">
             </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h2>Testimonial</h2>
-                    <img id="adoption" src="assets/images/edie_adoption_resize.jpg" class="rounded"
-                        alt="Photo of dog and new owners">
-                    <p><i>Adopting Edie is the best thing we have ever done. She came to us not knowing anything other
-                            than kennel life but she has adapted brilliantly and is now a part of the family. To anybody
-                            looking at adopting a greyhound we say go for it! you won't regret it.<br>Lucy and Richard,
-                            Cardiff</i></p>
 
-                    <h2>How to Volunteer</h2>
-                    <p>We are always in need of help looking after our dogs or raising money through fundraising.</p>
-                    <p>If you could spare some time to take one of our dogs for a walk or transport them on vet visits
-                        please contact us through the <a href="form.html">Get in
-                            Touch</a> page.</p>
-                    <p>Alternatively you may want to organise a plant sale or raffle to raise much needed funds to care
-                        for our dogs.</p>
-                    <p>Whatever you choose to do our dogs will be very grateful for your support.</p>
-                </div>
+            <div class="col-sm-4 border-right border-dark">
+                <h2>Testimonial</h2>
+                <img id="adoption" src="assets/images/edie_adoption_resize.jpg" class="img-responsive rounded"
+                    alt="Photo of dog and new owners">
+                <p><i>Adopting Edie is the best thing we have ever done. She came to us not knowing anything other
+                        than kennel life but she has adapted brilliantly and is now a part of the family. To anybody
+                        looking at adopting a greyhound we say go for it! you won't regret it.<br>Lucy and Richard,
+                        Cardiff</i></p>
+
+                <h2>How to Volunteer</h2>
+                <p>We are always in need of help looking after our dogs or raising money through fundraising.</p>
+                <p>If you could spare some time to take one of our dogs for a walk or transport them on vet visits
+                    please contact us through the <a href="form.html">Get in
+                        Touch</a> page.</p>
+                <p>Alternatively you may want to organise a plant sale or raffle to raise much needed funds to care
+                    for our dogs.</p>
+                <p>Whatever you choose to do our dogs will be very grateful for your support.</p>
             </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h2>Latest News & Events</h2>
-                    <p><strong>25/06/23 **Save the date**</strong> This years Great Global Greyhound Walk will take
-                        place on 24/10/23. Check out the website to find a walk in your area <a
-                            href="https://www.greatglobalgreyhoundwalk.co.uk" target="_blank">Great Global Greyhound
-                            Walk.</a>
-                    </p>
-                    <p><strong>25/06/23</strong> New arrivals! Please check out our new arrivals on the <a
-                            href="dogs.html" aria-label="Meet our Dogs">Meet our Dogs</a>
-                        page. We have had lots of dogs arriving at the centre this week looking for there new forever
-                        homes.
-                    </p>
-                    <p><strong>01/05/23</strong> Open day at the centre, why not come along and meet our hounds. Fun
-                        activities for all the family.</p>
-                    <p><strong>14/04/23</strong> Thank you to our wonderful volunteers who have raised a staggering
-                        £1,374
-                        through fund-raising
-                        activities including a cake sale and sponsored bicycle ride. Well done to you all.</p>
-                    <p><strong>01/01/23</strong> Happy New Year from all the hounds! Here's hoping they all find new
-                        homes in 2023.</p>
-                    <p><strong>25/12/22</strong> Merry Christmas. Our hounds are all tucking in to their Christmas
-                        dinners -
-                        hopefully next Christmas they will all
-                        have homes of their own.</p>
-                    <p><img src="assets/images/group.jpg" id="blog-image" alt="dogs walking"
-                            class="rounded"><strong>24/09/22</strong> There was a fantastic turnout of over 30
-                        sighthounds for the annual <a href="https://www.greatglobalgreyhoundwalk.co.uk"
-                            target="_blank">Great Global Greyhound
-                            Walk.</a> Thanks to all the volunteers who helped to walk them at Cosmeston Park near
-                        Cardiff.</p>
-                </div>
+            <div class="col-sm-4">
+                <h2>Latest News & Events</h2>
+                <p><strong>25/06/23 **Save the date**</strong> This years Great Global Greyhound Walk will take
+                    place on 24/10/23. Check out the website to find a walk in your area <a
+                        href="https://www.greatglobalgreyhoundwalk.co.uk" target="_blank">Great Global Greyhound
+                        Walk.</a>
+                </p>
+                <p><strong>25/06/23</strong> New arrivals! Please check out our new arrivals on the <a href="dogs.html"
+                        aria-label="Meet our Dogs">Meet our Dogs</a>
+                    page. We have had lots of dogs arriving at the centre this week looking for there new forever
+                    homes.
+                </p>
+                <p><strong>01/05/23</strong> Open day at the centre, why not come along and meet our hounds. Fun
+                    activities for all the family.</p>
+                <p><strong>14/04/23</strong> Thank you to our wonderful volunteers who have raised a staggering
+                    £1,374
+                    through fund-raising
+                    activities including a cake sale and sponsored bicycle ride. Well done to you all.</p>
+                <p><strong>01/01/23</strong> Happy New Year from all the hounds! Here's hoping they all find new
+                    homes in 2023.</p>
+                <p><strong>25/12/22</strong> Merry Christmas. Our hounds are all tucking in to their Christmas
+                    dinners -
+                    hopefully next Christmas they will all
+                    have homes of their own.</p>
+                <p><img src="assets/images/group.jpg" id="blog-image" alt="dogs walking"
+                        class="rounded"><strong>24/09/22</strong> There was a fantastic turnout of over 30
+                    sighthounds for the annual <a href="https://www.greatglobalgreyhoundwalk.co.uk"
+                        target="_blank">Great Global Greyhound
+                        Walk.</a> Thanks to all the volunteers who helped to walk them at Cosmeston Park near
+                    Cardiff.</p>
             </div>
         </div>
     </div>
 
     <!--Footer & Social media links-->
+
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
