--- a/about.html
+++ b/about.html
@@ -25,10 +25,10 @@
     </ul>
 
     <!--Content-->
-    <div class="container-fluid" id="about1">
+    <div class="container">
         <div class="row">
             <div class="col-lg-5">
-                <img id="logo" class="rounded" src="assets/images/homes-for-hounds-logo400x300.png"
+                <img id="logo" class="img-responsive rounded" src="assets/images/homes-for-hounds-logo400x300.png"
                     alt="Graphic of dog">
             </div>
             <div class="col-lg-7">
@@ -40,8 +40,7 @@
                     into retirement easily and make wonderful pets.</p>
                 <p>If you are considering re-homing a dog then why not speak to us about our greyhounds. We have dogs
                     suitable for all types of households including those with children and other animals. You can
-                    contact us through our <a href="form.html" aria-label="Go to About Us">Get in Touch</a></li> page.
-                </p>
+                    contact us through our <a href="form.html" aria-label="Go to About Us">Get in Touch</a> page.
                 </p>
                 <p>Greyhounds are easy to keep, they require surprisingly little exercise and are quiet and clean in the
                     house. They have a naturally calm, laid-back temperament and adapt from life on the track to life on
@@ -50,10 +49,10 @@
             </div>
         </div>
     </div>
-    <div class="parent-container d-sm-flex">
-        <div class="container" id="about2">
+    
+        <div class="container">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-6 border-right border-dark">
                     <h2>Did You Know?</h2>
                     <p>Did you know the greyhound is one of the oldest breeds in history? These noble dogs have been
                         traced
@@ -63,55 +62,40 @@
                         greyhound a
                         home, you are taking
                         on a true thoroughbred and a breed that has been “man's best friend” for thousands of years!</p>
+                <img id="cave-painting" src="assets/images/cave_painting.jpg" class="img-responsive rounded"
+                    alt="Cave painting of dogs hunting buffalo">
                 </div>
                 <div class="col-sm-6">
-                    <img id="cave-painting" src="assets/images/cave_painting.jpg" class="rounded"
-                        alt="Cave painting of dogs hunting buffalo">
-                </div>
-            </div>
-        </div>
-
-        <div class="container" id="about2a">
-            <div class="row">
-                <div class="col-sm-12">
                     <h2>Articles</h2>
                     <p>Please follow the links below for info on this gentle breed and articles on how to care for them.
                     </p>
                     <ul>
-                        <li><a rel="external"
-                                href="https://www.barleykennels.co.uk/care/are-you-ready-to-adopt-a-greyhound"
+                        <li><a rel="external" href="https://www.barleykennels.co.uk/care/are-you-ready-to-adopt-a-greyhound"
                                 target="_blank">Are you ready to adopt a greyhound?</a></li>
-                        <li><a rel="external"
-                                href="https://www.barleykennels.co.uk/care/what-is-your-new-adopted-greyhound-thinking"
+                        <li><a rel="external" href="https://www.barleykennels.co.uk/care/what-is-your-new-adopted-greyhound-thinking"
                                 target="_blank">What is your greyhound thinking?</a></li>
-                        <li><a rel="external"
-                                href="https://www.barleykennels.co.uk/care/travelling-safely-with-your-greyhound"
+                        <li><a rel="external" href="https://www.barleykennels.co.uk/care/travelling-safely-with-your-greyhound"
                                 target="_blank">Travelling safely with your greyhound</a></li>
-                        <li><a rel="external"
-                                href="https://www.barleykennels.co.uk/care/understanding-separation-anxiety-in-greyhounds"
+                        <li><a rel="external" href="https://www.barleykennels.co.uk/care/understanding-separation-anxiety-in-greyhounds"
                                 target="_blank">Understanding separation anxiety</a></li>
-                        <li><a rel="external" href="https://www.barleykennels.co.uk/care/what-is-prey-drive"
-                                target="_blank">What is prey
+                        <li><a rel="external" href="https://www.barleykennels.co.uk/care/what-is-prey-drive" target="_blank">What is prey
                                 drive?</a></li>
-                        <li><a rel="external"
-                                href="https://www.barleykennels.co.uk/care/the-importance-of-nail-and-teeth-care-for-your-dog"
+                        <li><a rel="external" href="https://www.barleykennels.co.uk/care/the-importance-of-nail-and-teeth-care-for-your-dog"
                                 target="_blank">Guide to nail and teeth care</a></li>
-                        <li><a rel="external"
-                                href="https://www.barleykennels.co.uk/care/feeding-a-balanced-diet-to-your-greyhound"
+                        <li><a rel="external" href="https://www.barleykennels.co.uk/care/feeding-a-balanced-diet-to-your-greyhound"
                                 target="_blank">Feeding a balanced diet</a></li>
                         <li><a rel="external"
                                 href="https://www.greyhoundtrust.org.uk/assets/000/004/111/training_tips_original.pdf?1581612710"
                                 target="_blank">Teaching basic commands</a></li>
                     </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
 
-    <div class="container-fluid" id="about3">
+    <div class="container">
         <div class="row">
             <div class="col-sm-8">
-                <img id="dogs-playing" class="rounded" src="assets/images/annie-spratt_resize620.jpg"
+                <img id="dog-lying" class="img-responsive rounded" src="assets/images/annie-spratt_resize620.jpg"
                     alt="Photo of dog lying down">
             </div>
             <div class="col-sm-4">
