Fix change favicon filepath to display in gitpages

--- a/dogs.html
+++ b/dogs.html
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="assets/images/dotty.jpg" alt="Photo of dog">
+            <img class="card-img-top responsive" src="assets/images/new.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Dotty</h4>
                 <p class="card-text">18 month old, Female</p>
