--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/c454350385.js" crossorigin="anonymous"></script>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?">
     <link rel="manifest" href="/site.webmanifest">
 </head>
 
@@ -66,7 +66,7 @@
 
             <div class="col-sm-4 border-right border-dark">
                 <h2>Testimonial</h2>
-                <img id="adoption" src="assets/images/edie_adoption_resize.jpg" class="img-responsive rounded"
+                <img id="adoption" src="assets/images/edie_adoption.jpg" class="img-responsive rounded"
                     alt="Photo of dog and new owners">
                 <p><i>Adopting Edie is the best thing we have ever done. She came to us not knowing anything other
                         than kennel life but she has adapted brilliantly and is now a part of the family. To anybody
@@ -91,8 +91,7 @@
                 </p>
                 <p><strong>25/06/23</strong> New arrivals! Please check out our new arrivals on the <a href="dogs.html"
                         aria-label="Meet our Dogs">Meet our Dogs</a>
-                    page. We have had lots of dogs arriving at the centre this week looking for there new forever
-                    homes.
+                    page.
                 </p>
                 <p><strong>01/05/23</strong> Open day at the centre, why not come along and meet our hounds. Fun
                     activities for all the family.</p>
