Fix clean up redundant code in stle.css

--- a/about.html
+++ b/about.html
@@ -49,48 +49,52 @@
             </div>
         </div>
     </div>
-    
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 border-right border-dark">
-                    <h2>Did You Know?</h2>
-                    <p>Did you know the greyhound is one of the oldest breeds in history? These noble dogs have been
-                        traced
-                        back
-                        over 4,000
-                        years to early cave drawings and are the only breed mentioned in the Bible. By giving a
-                        greyhound a
-                        home, you are taking
-                        on a true thoroughbred and a breed that has been “man's best friend” for thousands of years!</p>
-                <img id="cave-painting" src="assets/images/cave_painting.jpg" class="img-responsive rounded"
-                    alt="Cave painting of dogs hunting buffalo">
-                </div>
-                <div class="col-sm-6">
-                    <h2>Articles</h2>
-                    <p>Please follow the links below for info on this gentle breed and articles on how to care for them.
-                    </p>
-                    <ul>
-                        <li><a rel="external" href="https://www.barleykennels.co.uk/care/are-you-ready-to-adopt-a-greyhound"
-                                target="_blank">Are you ready to adopt a greyhound?</a></li>
-                        <li><a rel="external" href="https://www.barleykennels.co.uk/care/what-is-your-new-adopted-greyhound-thinking"
-                                target="_blank">What is your greyhound thinking?</a></li>
-                        <li><a rel="external" href="https://www.barleykennels.co.uk/care/travelling-safely-with-your-greyhound"
-                                target="_blank">Travelling safely with your greyhound</a></li>
-                        <li><a rel="external" href="https://www.barleykennels.co.uk/care/understanding-separation-anxiety-in-greyhounds"
-                                target="_blank">Understanding separation anxiety</a></li>
-                        <li><a rel="external" href="https://www.barleykennels.co.uk/care/what-is-prey-drive" target="_blank">What is prey
-                                drive?</a></li>
-                        <li><a rel="external" href="https://www.barleykennels.co.uk/care/the-importance-of-nail-and-teeth-care-for-your-dog"
-                                target="_blank">Guide to nail and teeth care</a></li>
-                        <li><a rel="external" href="https://www.barleykennels.co.uk/care/feeding-a-balanced-diet-to-your-greyhound"
-                                target="_blank">Feeding a balanced diet</a></li>
-                        <li><a rel="external"
-                                href="https://www.greyhoundtrust.org.uk/assets/000/004/111/training_tips_original.pdf?1581612710"
-                                target="_blank">Teaching basic commands</a></li>
-                    </ul>
-                    </div>
-                </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 border-right border-dark">
+                <h2>Did You Know?</h2>
+                <p><img id="cave-painting" src="assets/images/cave_painting.jpg" class="img-responsive rounded"
+                        alt="Cave painting of dogs hunting buffalo">Did you know the greyhound is one of the oldest
+                    breeds in history? These noble dogs have been traced back over 4,000 years to early cave drawings
+                    and are the only breed mentioned in the Bible. By giving a
+                    greyhound a home, you are taking on a true thoroughbred and a breed that has been “man's best
+                    friend” for thousands of years!
+                </p>
+
             </div>
+            <div class="col-sm-6">
+                <h2>Articles</h2>
+                <p>Please follow the links below for info on this gentle breed and articles on how to care for them.
+                </p>
+                <ul>
+                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/are-you-ready-to-adopt-a-greyhound"
+                            target="_blank">Are you ready to adopt a greyhound?</a></li>
+                    <li><a rel="external"
+                            href="https://www.barleykennels.co.uk/care/what-is-your-new-adopted-greyhound-thinking"
+                            target="_blank">What is your greyhound thinking?</a></li>
+                    <li><a rel="external"
+                            href="https://www.barleykennels.co.uk/care/travelling-safely-with-your-greyhound"
+                            target="_blank">Travelling safely with your greyhound</a></li>
+                    <li><a rel="external"
+                            href="https://www.barleykennels.co.uk/care/understanding-separation-anxiety-in-greyhounds"
+                            target="_blank">Understanding separation anxiety</a></li>
+                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/what-is-prey-drive"
+                            target="_blank">What is prey
+                            drive?</a></li>
+                    <li><a rel="external"
+                            href="https://www.barleykennels.co.uk/care/the-importance-of-nail-and-teeth-care-for-your-dog"
+                            target="_blank">Guide to nail and teeth care</a></li>
+                    <li><a rel="external"
+                            href="https://www.barleykennels.co.uk/care/feeding-a-balanced-diet-to-your-greyhound"
+                            target="_blank">Feeding a balanced diet</a></li>
+                    <li><a rel="external"
+                            href="https://www.greyhoundtrust.org.uk/assets/000/004/111/training_tips_original.pdf?1581612710"
+                            target="_blank">Teaching basic commands</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
     <div class="container">
         <div class="row">
