--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         aria-label="Meet our Dogs">Meet our Dogs.</a> The website is updated regularly so make sure
                     you keep checking back to see our new arrivals!
                 </p>
-                <img id="dogs-playing" src="assets/images/dogs_running.jpg" class="rounded"
+                <img id="dogs-running" src="assets/images/dogs_running.jpg" class="img-responsive rounded"
                     alt="Photo of dogs playing on beach">
             </div>
 
