--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
 
 <body>
     <!--Nav bar-->
+
     <ul class="nav-bar sticky-top">
         <li><a href="index.html" aria-label="Go to the Home page">Home</a></li>
         <li><a class="active" href="about.html" aria-label="Go to About Us">About Us</a></li>
@@ -25,27 +26,27 @@
     </ul>
 
     <!--Content-->
+
     <div class="container">
         <div class="row">
             <div class="col-lg-5">
-                <img id="logo" class="img-responsive rounded" src="assets/images/homes-for-hounds-logo400x300.png"
-                    alt="Graphic of dog">
+                <img id="logo-square" class="img-responsive rounded"
+                    src="assets/images/homes-for-hounds-logo400x300.png" alt="Charities Logo">
             </div>
             <div class="col-lg-7">
                 <h2>About Us</h2>
                 <p>Homes for hounds are a charity dedicated to the re-homing of retired racing greyhounds. We were
                     established in 1988 and since then have rehomed many hundreds of retired dogs to their forever
-                    homes. These dogs
-                    settle
-                    into retirement easily and make wonderful pets.</p>
+                    homes. These dogs settle into retirement easily and make wonderful pets.
+                </p>
                 <p>If you are considering re-homing a dog then why not speak to us about our greyhounds. We have dogs
                     suitable for all types of households including those with children and other animals. You can
-                    contact us through our <a href="form.html" aria-label="Go to About Us">Get in Touch</a> page.
+                    contact us through our <a href="form.html" aria-label="Go to Get in Touch">Get in Touch</a> page.
                 </p>
                 <p>Greyhounds are easy to keep, they require surprisingly little exercise and are quiet and clean in the
                     house. They have a naturally calm, laid-back temperament and adapt from life on the track to life on
-                    the
-                    couch with ease. </p>
+                    the couch with ease.
+                </p>
             </div>
         </div>
     </div>
@@ -61,7 +62,6 @@
                     greyhound a home, you are taking on a true thoroughbred and a breed that has been “man's best
                     friend” for thousands of years!
                 </p>
-
             </div>
             <div class="col-sm-6">
                 <h2>Articles</h2>
@@ -110,8 +110,7 @@
                     <li>Average Retirement Age: Between 3 - 5 years of age</li>
                     <li>Average Lifespan: Up to 15 years!</li>
                     <li>Exercise Required: Perfectly happy with two twenty minute walks a day Greyhounds are built for
-                        speed, not stamina, and
-                        use up their energy in short bursts.</li>
+                        speed, not stamina, and use up their energy in short bursts.</li>
                     <li>Temperament - Intelligent, Gentle, Affectionate & Even Tempered.</li>
                 </ul>
             </div>
@@ -119,6 +118,7 @@
     </div>
 
     <!--Footer & Social media links-->
+
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
