--- a/dogs.html
+++ b/dogs.html
@@ -9,26 +9,34 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/c454350385.js" crossorigin="anonymous"></script>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
     <!--Nav bar-->
+
     <ul class="nav-bar sticky-top">
         <li><a href="index.html" aria-label="Go to the top of the page">Home</a></li>
         <li><a href="about.html" aria-label="Go to About Us">About Us</a></li>
         <li><a class="active" href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a></li>
         <li><a href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
-    </ul><br>
+    </ul>
+    <br>
 
     <!--Meet our dogs-->
+
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
                 <p>Here are all the dogs currently available for adoption. If you see a dog you are interested in and
                     would like more information, please contact us using the form on the <a href="form.html">Get in
                         Touch</a>
-                    page. We are always happy to talk about
-                    how wonderful our dogs are and they love visitors too, so why not come along and meet them!</p>
+                    page. We are always happy to talk about how wonderful our dogs are and they love visitors too, so
+                    why not come along and meet them!
+                </p>
             </div>
         </div>
     </div>
@@ -68,7 +76,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top responsive" src="assets/images/new.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/dotty.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Dotty</h4>
                 <p class="card-text">18 month old, Female</p>
@@ -92,6 +100,7 @@
     </div>
 
     <!--Footer & Social media links-->
+
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
