--- a/form.html
+++ b/form.html
@@ -11,31 +11,41 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/c454350385.js" crossorigin="anonymous"></script>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
     <!--Nav bar-->
+
     <ul class="nav-bar sticky-top">
         <li><a href="index.html" aria-label="Go to the top of the page">Home</a></li>
         <li><a href="about.html" aria-label="Go to About Us">About Us</a></li>
         <li><a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a></li>
         <li><a class="active" href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
-    </ul><br>
+    </ul>
+    <br>
 
     <!--Contact form & map-->
+
     <div class="container">
         <div class="row">
             <div class="column-12">
                 <p>Please use this form to enquire about our dogs. We love to hear from potential new owners
-                    and will get back to you to discuss the rehoming process in more detail.</p>
+                    and will get back to you to discuss the rehoming process in more detail.
+                </p>
             </div>
         </div>
     </div>
     <br>
+
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <form method="POST" action="https://formdump.codeinstitute.net/"></form>
+                <form method="POST" action="https://formdump.codeinstitute.net/">
+                </form>
                 <h2>Get in Touch</h2>
                 <div class="form-group">
                     <label for="name">Name:</label>
@@ -74,14 +84,15 @@
                     Greyhound Lane<br>
                     Greyhound<br>
                     GR37 4ND<br>
-                    Telephone: 0000 000 000<br>
+                    Telephone: 0000 000 000</p>
                 <p>You can also contact us by email hello@homesforhounds.com or via our social media links below</p>
                 <div class="google-map">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11172.809879811417!2d-3.188287399557932!3d51.412969459065074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486ef0ec09dcf8c9%3A0x4309b74e3e39b881!2sGreyhound%20Trust%20Southwest%20Wales!5e0!3m2!1sen!2suk!4v1687791931838!5m2!1sen!2suk"
                         width="800" height="800" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div><br>
+                </div>
+                <br>
                 <p>Opening times:<br>
                     Mon-Fri 2pm-4pm<br>
                     Sat & Sun 10am-4pm</p>
@@ -90,6 +101,7 @@
     </div>
 
     <!--Footer & Social media links-->
+
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
