--- a/index.html
+++ b/index.html
@@ -71,16 +71,19 @@
                 <p><i>Adopting Edie is the best thing we have ever done. She came to us not knowing anything other
                         than kennel life but she has adapted brilliantly and is now a part of the family. To anybody
                         looking at adopting a greyhound we say go for it! you won't regret it.<br>Lucy and Richard,
-                        Cardiff</i></p>
-
+                        Cardiff</i>
+                </p>
                 <h2>How to Volunteer</h2>
-                <p>We are always in need of help looking after our dogs or raising money through fundraising.</p>
+                <p>We are always in need of help looking after our dogs or raising money through fundraising.
+                </p>
                 <p>If you could spare some time to take one of our dogs for a walk or transport them on vet visits
-                    please contact us through the <a href="form.html">Get in
-                        Touch</a> page.</p>
+                    please contact us through the <a href="form.html">Get in Touch</a> page.
+                </p>
                 <p>Alternatively you may want to organise a plant sale or raffle to raise much needed funds to care
-                    for our dogs.</p>
-                <p>Whatever you choose to do our dogs will be very grateful for your support.</p>
+                    for our dogs.
+                </p>
+                <p>Whatever you choose to do our dogs will be very grateful for your support.
+                </p>
             </div>
             <div class="col-sm-4">
                 <h2>Latest News & Events</h2>
@@ -90,27 +93,27 @@
                         Walk.</a>
                 </p>
                 <p><strong>25/06/23</strong> New arrivals! Please check out our new arrivals on the <a href="dogs.html"
-                        aria-label="Meet our Dogs">Meet our Dogs</a>
-                    page.
+                        aria-label="Meet our Dogs">Meet our Dogs</a> page.
                 </p>
                 <p><strong>01/05/23</strong> Open day at the centre, why not come along and meet our hounds. Fun
-                    activities for all the family.</p>
+                    activities for all the family.
+                </p>
                 <p><strong>14/04/23</strong> Thank you to our wonderful volunteers who have raised a staggering
-                    £1,374
-                    through fund-raising
-                    activities including a cake sale and sponsored bicycle ride. Well done to you all.</p>
+                    £1,374 through fund-raising activities including a cake sale and sponsored bicycle ride. Well done
+                    to you all.
+                </p>
                 <p><strong>01/01/23</strong> Happy New Year from all the hounds! Here's hoping they all find new
-                    homes in 2023.</p>
-                <p><strong>25/12/22</strong> Merry Christmas. Our hounds are all tucking in to their Christmas
-                    dinners -
-                    hopefully next Christmas they will all
-                    have homes of their own.</p>
+                    homes in 2023.
+                </p>
+                <p><strong>25/12/22</strong> Merry Christmas. Our hounds are all tucking in to their Christmas dinners -
+                    hopefully next Christmas they will all have homes of their own.
+                </p>
                 <p><img src="assets/images/group.jpg" id="blog-image" alt="dogs walking"
-                        class="rounded"><strong>24/09/22</strong> There was a fantastic turnout of over 30
-                    sighthounds for the annual <a href="https://www.greatglobalgreyhoundwalk.co.uk"
-                        target="_blank">Great Global Greyhound
-                        Walk.</a> Thanks to all the volunteers who helped to walk them at Cosmeston Park near
-                    Cardiff.</p>
+                        class="rounded"><strong>24/09/22</strong> There was a fantastic turnout of over 30 sighthounds
+                    for the annual <a href="https://www.greatglobalgreyhoundwalk.co.uk" target="_blank">Great Global
+                        Greyhound Walk.</a> Thanks to all the volunteers who helped to walk them at Cosmeston Park near
+                    Cardiff.
+                </p>
             </div>
         </div>
     </div>
