Add user feedback section, bugs and nice to haves to Readme

--- a/about.html
+++ b/about.html
@@ -37,16 +37,14 @@
                 <h2>About Us</h2>
                 <p>Homes for hounds are a charity dedicated to the re-homing of retired racing greyhounds. We were
                     established in 1988 and since then have rehomed many hundreds of retired dogs to their forever
-                    homes. These dogs settle into retirement easily and make wonderful pets.
-                </p>
+                    homes. These dogs settle into retirement easily and make wonderful pets.</p>
                 <p>If you are considering re-homing a dog then why not speak to us about our greyhounds. We have dogs
                     suitable for all types of households including those with children and other animals. You can
                     contact us through our <a href="form.html" aria-label="Go to Get in Touch">Get in Touch</a> page.
                 </p>
                 <p>Greyhounds are easy to keep, they require surprisingly little exercise and are quiet and clean in the
                     house. They have a naturally calm, laid-back temperament and adapt from life on the track to life on
-                    the couch with ease.
-                </p>
+                    the couch with ease.</p>
             </div>
         </div>
     </div>
@@ -60,13 +58,11 @@
                     breeds in history? These noble dogs have been traced back over 4,000 years to early cave drawings
                     and are the only breed mentioned in the Bible. By giving a
                     greyhound a home, you are taking on a true thoroughbred and a breed that has been “man's best
-                    friend” for thousands of years!
-                </p>
+                    friend” for thousands of years!</p>
             </div>
             <div class="col-sm-6">
                 <h2>Articles</h2>
-                <p>Please follow the links below for info on this gentle breed and articles on how to care for them.
-                </p>
+                <p>Please follow the links below for info on this gentle breed and articles on how to care for them.</p>
                 <ul>
                     <li><a rel="external" href="https://www.barleykennels.co.uk/care/are-you-ready-to-adopt-a-greyhound"
                             target="_blank">Are you ready to adopt a greyhound?</a></li>
