--- a/dogs.html
+++ b/dogs.html
@@ -33,10 +33,9 @@
             <div class="col-sm-12">
                 <p>Here are all the dogs currently available for adoption. If you see a dog you are interested in and
                     would like more information, please contact us using the form on the <a href="form.html">Get in
-                        Touch</a>
-                    page. We are always happy to talk about how wonderful our dogs are and they love visitors too, so
-                    why not come along and meet them!
-                </p>
+                        Touch</a> page. We are always happy to talk about how wonderful our dogs are and they love
+                    visitors too, so
+                    why not come along and meet them!</p>
             </div>
         </div>
     </div>
