--- a/form.html
+++ b/form.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+
     <!--Nav bar-->
 
     <ul class="nav-bar sticky-top">
@@ -34,8 +35,7 @@
         <div class="row">
             <div class="column-12">
                 <p>Please use this form to enquire about our dogs. We love to hear from potential new owners
-                    and will get back to you to discuss the rehoming process in more detail.
-                </p>
+                    and will get back to you to discuss the rehoming process in more detail.</p>
             </div>
         </div>
     </div>
@@ -44,8 +44,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <form method="POST" action="https://formdump.codeinstitute.net/">
-                </form>
+                <form method="POST" action="https://formdump.codeinstitute.net/"></form>
                 <h2>Get in Touch</h2>
                 <div class="form-group">
                     <label for="name">Name:</label>
