--- a/form.html
+++ b/form.html
@@ -44,37 +44,38 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <form method="POST" action="https://formdump.codeinstitute.net/"></form>
-                <h2>Get in Touch</h2>
-                <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" placeholder="Your name.." required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" placeholder="Your email.." required>
-                </div>
-                <div class="form-group">
-                    <label for="phone">Phone No:</label>
-                    <input type="tel" id="phone" name="phone" placeholder="Your phone number..">
-                </div>
-                <div class="form-group">
-                    <label for="dogs">Name of Dog:</label>
-                    <select id="dogs" name="dogs">
-                        <option value="hawk">Hawk</option>
-                        <option value="mimi">Mimi</option>
-                        <option value="trevor">Trevor</option>
-                        <option value="dotty">Dotty</option>
-                        <option value="anton">Anton</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="comments">Comments:</label>
-                    <textarea name="comments" id="comments" rows="11" cols="45"></textarea>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Submit">
-                </div>
+                <form action="https://formdump.codeinstitute.net/" method="POST">
+                    <h2>Get in Touch</h2>
+                    <div class="form-group">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" placeholder="Your name.." required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" placeholder="Your email.." required>
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Phone No:</label>
+                        <input type="tel" id="phone" name="phone" placeholder="Your phone number..">
+                    </div>
+                    <div class="form-group">
+                        <label for="dogs">Name of Dog:</label>
+                        <select id="dogs" name="dogs">
+                            <option value="hawk">Hawk</option>
+                            <option value="mimi">Mimi</option>
+                            <option value="trevor">Trevor</option>
+                            <option value="dotty">Dotty</option>
+                            <option value="anton">Anton</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="comments">Comments:</label>
+                        <textarea name="comments" id="comments" rows="11" cols="45"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Submit">
+                    </div>
+                </form>
             </div>
             <div class="col-sm-6">
                 <h2>How to Find Us</h2>
@@ -98,7 +99,6 @@
             </div>
         </div>
     </div>
-
     <!--Footer & Social media links-->
 
     <footer>
